--- a/setup.cfg
+++ b/setup.cfg
@@ -8,8 +8,8 @@ description = Add a short description here!
 author = Stefan Hudelmaier
 author-email = stefan.hudelmaier@device-insight.com
 license = apache
-long-description = file: README.rst
-long-description-content-type = text/x-rst; charset=UTF-8
+long-description = file: README.md
+long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
 url = https://github.com/pyscaffold/pyscaffold/
 project-urls =
     Documentation = https://pyscaffold.org/
@@ -51,15 +51,8 @@ testing =
     pytest-cov
 
 [options.entry_points]
-# Add here console scripts like:
-# console_scripts =
-#     script_name = dirtydir.module:function
-# For example:
-# console_scripts =
-#     fibonacci = dirtydir.skeleton:run
-# And any other entry points, for example:
-# pyscaffold.cli =
-#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
+console_scripts =
+    dirtydir = dirtydir.main:main
 
 [test]
 # py.test options when running `python setup.py test`
@@ -111,3 +104,5 @@ exclude =
 # This will be used when updating. Do not change!
 version = 3.2.3
 package = dirtydir
+extensions =
+    markdown
