--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@
 name = dirtydir
 description = Add a short description here!
 author = Stefan Hudelmaier
-author-email = stefan.hudelmaier@device-insight.com
+author-email = hudelmaier@gmail.com
 license = apache
 long-description = file: README.md
 long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
