--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 
 [metadata]
 name = dirtydir
-description = Add a short description here!
+description = Command line tool for listing changed sub-directories compared to a defined previous state 
 author = Stefan Hudelmaier
 author-email = hudelmaier@gmail.com
 license = apache
